--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Daniel Hellfeld, Ph.D."
   avatar           : "profile.jpg"
   bio              : "Senior Scientific Engineering Associate"
-  location         : "Lawrence Berkeley National Laboratory, Berkeley, CA"
-  employer         :
+  location         : "Berkeley, CA"
+  employer         : "Lawrence Berkeley National Laboratory"
   pubmed           :
   googlescholar    :
   email            : "dhellfeld@lbl.gov"
