Edit talks, add teaching

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Daniel Hellfeld, Ph.D."
   avatar           : "profile.jpg"
   bio              : "Senior Scientific Engineering Associate"
-  location         : "Lawrence Berkeley National Laboratory"
+  location         : "Lawrence Berkeley National Lab"
   employer         : "Berkeley, CA"
   pubmed           :
   googlescholar    :
