--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,7 @@ author:
   facebook         :
   foursquare       :
   github           : "dhellfeld"
+  gitlab           : "dhellfeld"
   google_plus      :
   keybase          :
   instagram        :
