Fix location, cv awards

--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Daniel Hellfeld, Ph.D."
   avatar           : "profile.jpg"
   bio              : "Senior Scientific Engineering Associate"
-  location         : "Berkeley Lab"
-  employer         : "Berkeley, CA"
+  location         : "Berkeley Lab, Berkeley, CA"
+  employer         :
   pubmed           :
   googlescholar    :
   email            : "dhellfeld@lbl.gov"
